Bug fix: Could not press menu buttons
When the screen was not wide enough and menu buttons overlapped, when the menu bar was hidden, you could not press the function buttons to Read, Erase, etc. You could only press the bottom part of the button as the rest was overlapped by the menu with a higher zIndex.

--- a/css/dropdownMenuBar.css
+++ b/css/dropdownMenuBar.css
@@ -90,7 +90,7 @@
     font-size: 1.4vh;
 }
 .buttonsMenuBar{
-    z-index:41;
+    z-index:0;
     position: fixed;
     width: 100vw;
     opacity: 0;
@@ -101,6 +101,7 @@
     text-align: center;
 }
 .buttonsMenuBarOpened{
+    z-index:41 !important;
     top: 0px;
     -webkit-transition: opacity 0.5s ease-out;
     -webkit-transition-delay: 0.25s;
